fix: dark mode switch button

--- a/style.css
+++ b/style.css
@@ -274,10 +274,9 @@ h1 {
 
 
 #icon{
-	width: 24px;
-	height: 24px;
+	width: 20px;
+	height: 20px;
 	cursor: pointer;
-	margin-top:-5px;
 }
 
 #return-to-top {
